eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
      - name: simple-bank-api
        image: 135874464415.dkr.ecr.eu-central-1.amazonaws.com/simplebank:ab0f75484b85bba408842508a9cef7a2444cf87c
        ports:
        - containerPort: 8080
